--- a/src/components/CodeParser.css
+++ b/src/components/CodeParser.css
@@ -17,19 +17,15 @@ body {
   color: var(--light-gray);
 }
 
-.import_statement,
-.if {
+.keyword {
   color: var(--pink);
 }
 
-.import_statement.identifier,
-.type,
-.exception {
+.module {
   color: var(--green);
 }
 
-.def,
-.not {
+.special-keyword {
   color: var(--dark-blue);
 }
 
@@ -40,22 +36,19 @@ body {
   color: var(--light-yellow);
 }
 
-.function_definition.parameters.bracket,
 .bracket {
   color: var(--yellow);
 }
 
-.function_definition.parameters,
-.function_definition.block.identifier {
+.variable {
   color: var(--light-blue);
 }
 
-.string,
-.function_definition.parameters.string {
+.string {
   color: var(--orange);
 }
 
-.float {
+.number {
   color: var(--light-green);
 }
 
@@ -63,10 +56,6 @@ body {
   color: var(--blue);
 }
 
-.parameter.string {
-  color: var(--orange);
-}
-
-.function_definition.parameters.operator {
+.punctuation {
   color: var(--light-gray);
 }
